# GORU

./: .coverage  .env  .env.template  .gitignore  .pre-commit-config.yaml  COVERAGE_REPORT.md  DATABASE_URL_error.txt  DOCKER_README.md  README.md  TEST_COVERAGE_REPORT.md  alembic.ini  build.ps1  build.sh  calisma_notu.md  coverage.xml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  sprint1.txt  sprint3.txt  sprint3_retrospective.md  test.db
.github/workflows/: ci.yml  import-coverage.yml
MDDocs/: API_USAGE_DOCUMENTATION.md  COVERAGE_REPORT.md  ENVIRONMENT_SETUP.md  README_OPTIMIZATION.md  sprint3_retrospective.md
SprintDosyalar/: Sprint 3_5.txt  sprint2.txt  sprint3.txt
backend/: .coverage  .coveragerc  COVERAGE_REPORT_90.md  Dockerfile  FINAL_CHECKLIST.md  MOCK_ROUTER_INTEGRATION.md  alembic.ini  coverage.xml  dev.db  dev_config.yaml  env_setup.py  fix_duplicate_headers.py  fix_endpoints.py  fix_linting.py  fix_paths.py  generate_env.py  pytest.ini  requirements.txt  test.db  todo_fix_all_issues.py
backend/app/: __init__.py  auth.py  database.py  main.py  mock_routes.py  mock_services.py  models.py  routes.py  schemas.py  test_db.py
backend/app/core/: __init__.py  security.py  settings.py
backend/app/implementations/: auth_implementation.py
backend/app/interfaces/: __init__.py  auth_interface.py  database_interface.py  settings_interface.py
backend/app/middleware/: README.md  __init__.py  header_validation.py  logging_middleware.py  rate_limiting.py  security_headers.py
backend/app/routes/: __init__.py  common.py  orders.py  stocks.py  users.py
backend/app/scripts/: create_tables.py  generate_dummy_data.py  migrate_to_postgresql.py  seed_demo_data.py
backend/app/tests/: README_IMPORT_COVERAGE.md  conftest.py  test_auth_error_handling.py  test_comprehensive_coverage.py  test_database_coverage.py  test_database_final_coverage.py  test_database_parallel.py  test_database_ultimate_coverage.py  test_db.py  test_edge_cases.py  (+24 more)
backend/migrations/: env.py  script.py.mako
calisma/: DATABASE_COVERAGE_REPORT.md  DATABASE_COVERAGE_REPORT_FINAL.md  ENVIRONMENT_SETUP.md  calisma_notu.md  calisma_notu_28072025_birlesik.md  calisma_notu_29072025.md  calisma_ozeti_24072025.txt  calisma_ozeti_27072025.txt  sprint2_summary.md  sprint3.txt
(+9 files in other folders)
